🎨 fix: align text to center in list.html

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,7 +75,7 @@
     @apply py-4;
   }
   #page-table td {
-    @apply py-2 truncate;
+    @apply py-2 truncate text-center;
   }
   #page-table tr {
     @apply border-b border-text;
